# amplifier-bundle-my-voice

./: README.md  bundle.md  pyproject.toml
agents/: message-tuner.md  voice-analyst.md
behaviors/: my-voice.yaml
context/: agent-overview.md  delegation-policy.md  instructions.md  setup-guide.md
docs/: my-voice-overview-deck.html
modules/hook-my-voice-sync/: pyproject.toml
modules/hook-my-voice-sync/amplifier_module_my_voice_sync/: __init__.py  hook.py
modules/tool-my-voice-profiles/: pyproject.toml
modules/tool-my-voice-profiles/amplifier_module_my_voice_profiles/: __init__.py  store.py  tool.py
src/amplifier_my_voice/: __init__.py  hook.py  store.py  tool.py
templates/: DECODER_RING_TEMPLATE.md  VOICE_PROFILE_TEMPLATE.md
