[project]
name = "amplifier-module-hook-my-voice-sync"
version = "0.1.0"
description = "Voice profile sync hook for my-voice bundle"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
my-voice-sync = "amplifier_module_my_voice_sync:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_my_voice_sync"]
