[project]
name = "amplifier-module-tool-my-voice-profiles"
version = "0.1.0"
description = "Voice profile management tool for my-voice bundle"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
my-voice-profiles = "amplifier_module_my_voice_profiles:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_my_voice_profiles"]
